[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caz"
version = "0.0.1"
description = "Statistical downscaling of Holocene ESM transient simulations over North America (PCR + SEM)."
requires-python = ">=3.11"
authors = [{ name = "Liang" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "xarray>=2024.1",
    "netcdf4>=1.6",
    "zarr>=2.18",
    "numcodecs>=0.12",
    "dask[array,distributed]>=2024.1",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "pyproj>=3.6",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pydantic>=2.6",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy", "ipykernel"]

[project.scripts]
caz = "caz.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
